# policy-factory

./: .dockerignore  .gitignore  Dockerfile  Makefile  env.example  mp-sw-factory.yaml  pyproject.toml
src/policy_factory/: __init__.py  auth.py  events.py  main.py
tasks/0001-policy-factory-foundation/: 001.md  002.md  003.md  004.md  005.md  006.md  007.md  008.md  009.md  010.md  011.md  012.md  013.md  014.md  015.md  016.md  017.md  018.md  019.md  020.md  021.md  022.md  023.md  024.md  (+7 more)
tests/: conftest.py  test_activity_api.py  test_agent_config.py  test_agent_errors.py  test_agent_gemini.py  test_agent_prompts.py  test_agent_session.py  test_agent_tools.py  test_auth_api.py  test_auth_service.py  test_broadcast_handler.py  test_cascade_api.py  test_cascade_content.py  test_cascade_controller.py  test_cascade_orchestrator.py  test_classifier.py  test_critic_runner.py  test_critics.py  test_data_git.py  test_data_init.py  test_data_layers.py  test_data_markdown.py  test_events.py  test_feedback_api.py  test_heartbeat_api.py  test_heartbeat_orchestrator.py  test_heartbeat_scheduler.py  test_ideas_helpers.py  test_ideas_router.py  test_integration_activity.py  test_integration_auth.py  test_integration_cascade.py  test_integration_classifier.py  test_integration_conversations.py  test_integration_critic.py  test_integration_data_layer.py  test_integration_first_run.py  test_integration_frontend_backend.py  test_integration_heartbeat.py  test_integration_ideas.py  (+21 more)
ui/: eslint.config.js  index.html  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts
(+302 files in other folders)
